# pliron

./: .gitignore  Cargo.toml  README.md  pre-ci.sh  run_ci.sh
.github/: FUNDING.yml
.github/workflows/: ci-no-default-features.yml  ci-pliron-llvm-no-default-features.yml  ci-pliron-no-default-features.yml  ci.yml  docs-pages-index.html  docs-pages.yml  llvm-opt-testsuite.yml
examples/kaleidoscope/: README.md  ast.rs  dialect.rs  from_ast.rs  jit.rs  main.rs  to_llvm.rs
kaleidoscope/: book.toml
kaleidoscope/src/: ch1-parser.md  ch2-dialect.md  ch3-from_ast.md  ch4-to_llvm.md  ch5-jit.md  examples-index.md
pliron-derive/: Cargo.toml  NOTICE
pliron-derive/src/: derive_attr.rs  derive_entity.rs  derive_format.rs  derive_op.rs  derive_type.rs  interfaces.rs  lib.rs  verify_succ.rs
pliron-derive/tests/: format_base.rs  format_op.rs  op_tests.rs  verify_succ.rs
pliron-llvm/: Cargo.toml  LICENSE.md  build.rs
pliron-llvm/llvm-opt/: Cargo.toml  llvm-opt-wrapper.sh
pliron-llvm/src/: attributes.rs  builtin_to_llvm.rs  from_llvm_ir.rs  function_call_utils.rs  interface_impls.rs  lib.rs  op_interfaces.rs  ops.rs  to_llvm_ir.rs  types.rs
pliron-llvm/tests/: builtin_to_llvm.rs  compile_run.rs  op_unit_tests.rs
src/: attribute.rs  basic_block.rs  common_traits.rs  context.rs  debug_info.rs  deps.rs  dialect.rs  identifier.rs  inserter.rs  lib.rs  linked_list.rs  location.rs  op.rs  operation.rs  parsable.rs  pass.rs  pass_manager.rs  printable.rs  region.rs  result.rs  std_deps.rs  storage_uniquer.rs  symbol_table.rs  type.rs  uniqued_any.rs  value.rs
src/analyses/: liveness.rs  mod.rs
src/builtin/: attr_interfaces.rs  attributes.rs  interface_impls.rs  mod.rs  op_interfaces.rs  ops.rs  type_interfaces.rs  types.rs
src/graph/: dominance.rs  mod.rs  traversals.rs  visualize.rs  walkers.rs
src/irbuild/: cloning.rs  dialect_conversion.rs  inserter.rs  listener.rs  match_rewrite.rs  mod.rs  rewriter.rs
src/irfmt/: mod.rs  outlined.rs  parsers.rs
src/opts/: constants.rs  dce.rs  mem2reg.rs  mod.rs  simplify_cfg.rs
src/utils/: apfloat.rs  apint.rs  arrayna.rs  const_bound_n.rs  inventory.rs  mod.rs  once_vec.rs  timer.rs  trait_cast.rs  (+2 more)
tests/: cloning.rs  dialect_conversion.rs  dict_key_duplicate.rs  interfaces.rs  ir_construct.rs  rewriter.rs
(+34 files in other folders)
