[workspace]
resolver = "2"
members = ["pliron-derive", "pliron-llvm", "pliron-llvm/llvm-opt"]

[package]
name = "pliron"
description = "Programming Languages Intermediate RepresentatiON"
version.workspace = true
edition.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

[workspace.package]
version = "0.16.0"
edition = "2024"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/pliron-org/pliron"
categories = ["compilers"]
keywords = ["pliron", "llvm", "mlir", "compiler"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
std = []
default = ["std"]

[dependencies]
pliron-derive = { path = "./pliron-derive", version = "0" }

awint.workspace = true
rustc_apfloat.workspace = true
rustc-hash.workspace = true
thiserror.workspace = true
combine.workspace = true
log.workspace = true
hi_sparse_bitset.workspace = true
slotmap.workspace = true
once_vec.workspace = true
downcast-rs.workspace = true
regex.workspace = true
dyn-clone.workspace = true

hashbrown = "0"
spin = "0"

[target.'cfg(target_family = "wasm")'.dependencies]
inventory = "0"
[target.'cfg(not(target_family = "wasm"))'.dependencies]
linkme = "0"

[dev-dependencies]
expect-test.workspace = true
env_logger.workspace = true
clap.workspace = true
utf8-chars.workspace = true

[target.'cfg(not(target_family = "wasm"))'.dev-dependencies]
pliron-llvm = { path = "./pliron-llvm" }
[target.'cfg(target_family = "wasm")'.dev-dependencies]
wasm-bindgen-test = "0.3"

[workspace.dependencies]
awint = "0"
bitflags = "2"
rustc_apfloat = "0.2"
assert_cmd = "2"
clap = { version = "4", features = ["derive"] }
expect-test = "1"
proc-macro2 = "1"
quote = "1"
prettyplease = "0"
rustc-hash = "2"
combine = "4"
thiserror = "2"
tempfile = "3"
log = { version = "0", features = ["release_max_level_info"] }
env_logger = "0"
cargo-manifest = "0"
which = "8"
hi_sparse_bitset = "0"
utf8-chars = "3"
slotmap = "1"
once_vec = "0"
downcast-rs = "2"
regex = "1"
dyn-clone = "1"

[[example]]
name = "kaleidoscope"
path = "examples/kaleidoscope/main.rs"
test = true
